# rxs-algorithms

./: CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  vcpkg.json
.github/workflows/: build-windows.yml
modules/comparison/: CMakeLists.txt  SquareTree.cpp  SquareTree.h  comparison.sln  comparison.vcxproj  czxTool.cpp  czxTool.h  main.cpp  utlis.hpp
modules/comparison/czxDependence/: czxTool.cpp  czxTool.h
modules/curve_length/: BSplineLength.cpp  BSplineLength.h  CMakeLists.txt  CzxRansac.cpp  CzxRansac.h  Hole.hpp  curveLength.cpp  curveLength.sln  curveLength.vcxproj  curveLength_DLL.sln  czxTool.cpp  czxTool.h  types_.h
modules/curve_length/core/: cubic_b_spline.cpp  cubic_b_spline.h  read_write_asc.cpp  read_write_asc.h  spline_curve_fitting.cpp  spline_curve_fitting.h
modules/curve_length/curveLength_DLL/: BSplineLength.cpp  BSplineLength.h  CzxRansac.cpp  CzxRansac.h  Hole.hpp  Source.def  curveLength_DLL.vcxproj  czxTool.cpp  czxTool.h  dllmain.cpp  pch.h  resource.h
modules/flatness/: CMakeLists.txt  Flatness.sln  Flatness.vcxproj  README.md  flatness.cpp  flatness.h  main.cpp  test_main.cpp
modules/hole_depth/: CMakeLists.txt  README.md  dll_holeDeepth.cpp  hole_depth.cpp  hole_depth.h  test_main.cpp
modules/minimum_zone/: CMakeLists.txt  ConvexHull.cpp  ConvexHull.h  GA.cpp  GA.h  HullBase.cpp  HullBase.h  MinimumZone.sln  MinimumZone.vcxproj  MultipleDllConvex.cpp  MultipleDllConvex.h  PSO.cpp  PSO.h  TheadHull.cpp  TheadHull.h  czxTool.cpp  czxTool.h  main.cpp  opencv.props
modules/regis/: CMakeLists.txt  CzxRansac.h  Hole.cpp  Hole.h  Regis_v2.sln  Regis_v2.vcxproj  czxTool.cpp  czxTool.h  main.cpp  pcl_release.props
modules/surface/: CMakeLists.txt  DerivedFittingSurface.cpp  DerivedFittingSurface.h  NurbsCommon.hpp  NurbsFit.cpp  NurbsFit.h  NurbsSolve.cpp  NurbsSolve.h  NurbsSurface.cpp  NurbsSurface.h  OMPSurface.cpp  OMPSurface.h  cuda.props  czxTool.cpp  czxTool.h  main.cpp  surface.sln  surface.vcxproj
modules/volume/: CMakeLists.txt  README.md  czxTool.h  main.cpp  test_main.cpp  volume.cpp  volume.h  volume.sln  volume.vcxproj
modules/volume_glue/: CMakeLists.txt  README.md  volumeGlue.sln  volumeGlue.vcxproj  volume_glue.cpp  volume_glue.h  源.cpp
