cmake_minimum_required(VERSION 3.16)
project(rxs-algorithms LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Algorithm modules — each can be built independently
option(RXS_BUILD_ALL "Build all algorithm modules" OFF)
option(RXS_BUILD_CURVE_LENGTH "Build curve_length module" ON)
option(RXS_BUILD_COMPARISON "Build comparison module" ON)
option(RXS_BUILD_REGIS "Build regis module" ON)
option(RXS_BUILD_MINIMUM_ZONE "Build minimum_zone module" ON)
option(RXS_BUILD_SURFACE "Build surface module (requires CUDA toolkit + PCL on_nurbs)" ON)
option(RXS_BUILD_VOLUME "Build volume module" ON)
option(RXS_BUILD_FLATNESS "Build flatness module" ON)
option(RXS_BUILD_VOLUME_GLUE "Build volume_glue module" ON)
option(RXS_BUILD_HOLE_DEPTH "Build hole_depth module" ON)

if(RXS_BUILD_CURVE_LENGTH)
    add_subdirectory(modules/curve_length)
endif()
if(RXS_BUILD_COMPARISON)
    add_subdirectory(modules/comparison)
endif()
if(RXS_BUILD_REGIS)
    add_subdirectory(modules/regis)
endif()
if(RXS_BUILD_MINIMUM_ZONE)
    add_subdirectory(modules/minimum_zone)
endif()
if(RXS_BUILD_SURFACE)
    add_subdirectory(modules/surface)
endif()
if(RXS_BUILD_VOLUME)
    add_subdirectory(modules/volume)
endif()
if(RXS_BUILD_FLATNESS)
    add_subdirectory(modules/flatness)
endif()
if(RXS_BUILD_VOLUME_GLUE)
    add_subdirectory(modules/volume_glue)
endif()
if(RXS_BUILD_HOLE_DEPTH)
    add_subdirectory(modules/hole_depth)
endif()
